--- a/appspec.yml
+++ b/appspec.yml
@@ -4,7 +4,7 @@ files:
   - source: /
     destination: /home/ec2-user/express-app
 
-hook:
+hooks:
   ApplicationStop:
     - location: scripts/application_stop.sh
       timeout: 300
